--- a/style.css
+++ b/style.css
@@ -381,6 +381,11 @@ article .icon {
 }
 
 .project-title {
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  max-width: 100%;
+  
   font-size: 1.75rem;
   color: rgb(0, 0, 0);
   margin: 1rem;
@@ -436,6 +441,9 @@ article .icon {
   border-color: rgb(163, 163, 163);
 }
 .project-img {
+  width: 100%;
+  height: 200px; /* Set a fixed height */
+
   inline-size: 100%;
   aspect-ratio: 16/9;
   object-fit: cover; /* can change to contain if u don't want to crop */
